# tft_tracker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  scrape.MD
alembic/: env.py
alembic/versions/: 66f148fd0bf7_add_status.py  87da87cc3bf9_add_player_dispatch.py  92f49827b126_base.py  ec2acaccac8a_add_rank_score.py
backend/: Dockerfile  main.py  playground.html  playground.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 66f148fd0bf7_add_status.py  87da87cc3bf9_add_player_dispatch.py  92f49827b126_base.py  ec2acaccac8a_add_rank_score.py  f08b0633e82d_add_player_display_name.py
backend/src/etl_service/: app.py  main.py
backend/src/etl_service/core/: extractor.py  loader.py  scheduler.py  transformer.py  worker.py
backend/src/main_service/: db.py  main.py  schemas.py
backend/src/main_service/routers/: augments.py
backend/src/scripts/: init_db.py
backend/src/shared/: models.py  settings.py  utils.py
frontend/: Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json
frontend/src/: App.css  App.tsx  App.tsx.bak  main.tsx
frontend/src/components/: MyTable.tsx.bak  Table.tsx
frontend/src/components/API/: index.tsx
frontend/src/components/Header/: index.tsx
frontend/src/components/PageContent/: index.tsx
frontend/src/components/Pages/Augments/: index.tsx
frontend/src/components/Pages/Home/: index.tsx
frontend/src/components/Pages/Players/: index.tsx
frontend/src/components/Routes/: index.tsx
frontend/src/components/Stats/: index.tsx
src/: models.py  settings.py  utils.py
src/handler/: extractor.py  loader.py  scheduler.py  transformer.py  worker.py
src/scripts/: init_db.py
