[project]
name = ""
version = ""
description = ""
authors = [
    {name = "allenyuchen", email = "allenyuchen@hotmail.com"},
]
dependencies = [
    "sqlmodel>=0.0.8",
    "sqlalchemy>=1.4.41",
    "pydantic>=1.10.12",
    "aiohttp>=3.8.5",
    "beautifulsoup4>=4.12.2",
    "arrow>=1.2.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
format = [
    "black>=23.7.0",
    "isort>=5.12.0",
]
lint = [
    "mypy>=1.4.1",
    "ruff>=0.0.282",
]
