[project]
name = ""
version = ""
description = ""
authors = [
    {name = "allenyuchen", email = "allenyuchen@hotmail.com"},
]
dependencies = [
    "sqlmodel>=0.0.8",
    "sqlalchemy>=1.4.41",
    "pydantic>=1.10.12",
    "aiohttp>=3.8.5",
    "beautifulsoup4>=4.12.2",
    "arrow>=1.2.3",
    "asyncpg>=0.28.0",
    "loguru>=0.7.0",
    "alembic>=1.11.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
format = [
    "black>=23.7.0",
    "isort>=5.12.0",
]
lint = [
    "mypy>=1.4.1",
    "ruff>=0.0.282",
]
dev = [
    "psycopg2-binary>=2.9.7",
]

[tool.ruff]
ignore = ["E402"]
