[project]
name = "tft_tracker"
version = "0.1.0"
description = ""
authors = [
    {name = "allenyuchen", email = "allenyuchen@hotmail.com"},
]
dependencies = [
    "sqlmodel>=0.0.8",
    "sqlalchemy>=1.4.41",
    "pydantic>=1.10.12",
    "aiohttp>=3.8.5",
    "beautifulsoup4>=4.12.2",
    "arrow>=1.2.3",
    "asyncpg>=0.28.0",
    "loguru>=0.7.0",
    "alembic>=1.11.2",
    "typer>=0.9.0",
    "fastapi>=0.101.1",
    "uvicorn>=0.23.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
format = [
    "black",
    "isort",
]
lint = [
    "mypy",
    "ruff",
    "types-beautifulsoup4>=4.12.0.5",
]
dev = [
    "psycopg2-binary>=2.9.7",
]

[tool.ruff]
ignore = ["E402"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = false
